--- a/src/App.css
+++ b/src/App.css
@@ -35,17 +35,21 @@ body {
 }
 .sidebar ul li{
   margin-bottom: 20px;
-  margin-left: -20px;
+  margin-left: -30px;
 }
 .sidebar ul li a{
   text-decoration: none;
   color: rgb(255, 255, 255);
   font-size: 15px;
-  padding: 10px 20px ;
+  width: 210px;
+  padding: 10px 15px ;
   display: flex;  
   &.active{
     background-color: rgba(8, 8, 18, 0.617);
   }
+}
+.sidebar ul li a:hover{
+  background-color: rgba(255, 255, 255, 0.216);
 }
 .links{
   padding: 5px;
